@@ -8,6 +8,8 @@
 - Added Sky Zone Theme
 
 1.2 REQUIREMENTS:
+- HUGE MEMORY LEAK causes application to quickly jump to 100% CPU usage after connecting from app
+- Priority: Quit creating new GameViews; instead, I need to reset start and have the same GameView represent it. Memory leaks!
 - Receive score change from app
 - Test sizing of middle pane on TV; looks great on computer!
 
